Add Prometheus exporter

--- a/unbound/root/usr/local/unbound/unbound.conf
+++ b/unbound/root/usr/local/unbound/unbound.conf
@@ -39,7 +39,7 @@ server:
 
 	# enable extended statistics (query types, answer codes, status)
 	# printed from unbound-control. Default off, because of speed.
-	# extended-statistics: no
+	extended-statistics: yes
 
 	# Inhibits selected extended statistics (qtype, qclass, qopcode, rcode,
 	# rpz-actions) from printing if their value is 0.
@@ -1078,7 +1078,8 @@ dynlib:
 remote-control:
 	# Enable remote control with unbound-control(8) here.
 	# set up the keys and certificates with unbound-control-setup.
-	# control-enable: no
+	control-enable: yes
+	control-interface: /run/unbound/unbound.ctl
 
 	# what interfaces are listened to for remote control.
 	# give 0.0.0.0 and ::0 to listen to all interfaces.
